Add "xrootd-for-pelican" bundle using the OSG 25 packages (SOFTWARE-5695)
Dependencies are based on the dependencies listed in the .goreleaser.yml
for pelican-server and the Requires lines in osdf-server.spec.

There are separate bundles for el8 vs el9 because xrootd-s3-http is not
available in el8.

--- a/bundles.ini
+++ b/bundles.ini
@@ -199,3 +199,34 @@ repofile    = repos/ligo-el6.repo.in
 versionrpm  = glue
 stage1file  = ligo-stage1.lst
 
+[xrootd-for-pelican-el9]
+paramsets   = el9,x86_64
+dirname     = xrootd
+tarballname = xrootd-for-pelican-%(version)s-%(relnum)s.tar.gz
+;patchdirs   = patches/xrootd-for-pelican
+packages    = xrdcl-pelican
+              xrootd-multiuser
+              xrootd-s3-http
+              xrootd-scitokens
+              xrootd-server
+              xrootd-tcp-stats
+              xrootd-voms
+repofile    = repos/osg-25-%(dver)s.repo.in
+versionrpm  = xrootd
+stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
+
+[xrootd-for-pelican-el8]
+# el8 does not have xrootd-s3-http
+paramsets   = el8,x86_64
+dirname     = xrootd
+tarballname = xrootd-for-pelican-%(version)s-%(relnum)s.tar.gz
+;patchdirs   = patches/xrootd-for-pelican
+packages    = xrdcl-pelican
+              xrootd-multiuser
+              xrootd-scitokens
+              xrootd-server
+              xrootd-tcp-stats
+              xrootd-voms
+repofile    = repos/osg-25-%(dver)s.repo.in
+versionrpm  = xrootd
+stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
