Just make a bundle for pelican-server
This works almost out of the box with a stock almalinux:9 container.
I needed to modify osg-post-install to not check if Perl existed (I think it's
only a dependency of fetch-crl anyway), plus install openssl-libs (since I'd
rather not bundle it in the tarball).

--- a/bundles.ini
+++ b/bundles.ini
@@ -215,6 +215,19 @@ repofile    = repos/osg-25-%(dver)s.repo.in
 versionrpm  = xrootd
 stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
 
+[pelican-with-xrootd]
+paramsets   = el9,x86_64
+dirname     = pelican-with-xrootd
+tarballname = pelican-with-xrootd-%(version)s-%(relnum)s.tar.gz
+;patchdirs   = patches/xrootd-for-pelican
+packages    = pelican-server
+              xrootd-multiuser
+              xrootd-s3-http
+repofile    = repos/osg-25-%(dver)s.repo.in
+versionrpm  = pelican
+stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
+
+
 [xrootd-for-pelican-el8]
 # el8 does not have xrootd-s3-http
 paramsets   = el8,x86_64
