Remove stuff not related to xrootd tarball builds

--- a/bundles.ini
+++ b/bundles.ini
@@ -1,10 +1,6 @@
 [GLOBAL]
-default_bundles_3.4=osg-wn-client-3.4 osg-afs-client-3.4
-default_bundles_3.5=osg-wn-client-3.5 osg-afs-client-3.5
-default_bundles_3.6=osg-wn-client-3.6
-default_bundles_23=osg-wn-client-23
-default_bundles_24=osg-wn-client-24
-default_bundles_25=osg-wn-client-25
+default_bundles_24=xrootd-for-pelican-el8 xrootd-for-pelican-el9 pelican-el8 pelican-el9
+default_bundles_25=xrootd-for-pelican-el8 xrootd-for-pelican-el9 pelican-el8 pelican-el9
 
 ; This file defines the tarball bundles that we can create
 
@@ -37,168 +33,6 @@ default_bundles_25=osg-wn-client-25
 ;;             exclude from the tarball
 ;stage1file  = osg-stage1.lst
 
-[osg-wn-client-3.4]
-paramsets   = el6,x86_64 el7,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/3.4/%(dver)s
-dirname     = osg-wn-client
-tarballname = osg-wn-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data
-repofile    = repos/osg-3.4.repo.in
-versionrpm  = osg-version
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-afs-client-3.4]
-paramsets   = el6,x86_64 el7,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/3.4/%(dver)s
-              patches/afs-client/3.4/common
-              patches/afs-client/3.4/%(dver)s
-dirname     = osg-afs-client
-tarballname = osg-afs-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data osg-ca-scripts
-              globus-common-progs  globus-gsi-cert-utils-progs  gsi-openssh-clients
-              cigetcert
-repofile    = repos/osg-3.4.repo.in
-versionrpm  = osg-version
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-gridftp-3.4]
-paramsets   = el6,x86_64
-dirname     = gridftp
-tarballname = gridftp-%(version)s-%(relnum)s.tar.gz
-packages    = globus-gridftp-server-progs
-              globus-gass-copy-progs
-              globus-proxy-utils
-repofile    = repos/osg-3.4.repo.in
-versionrpm  = globus-gridftp-server-progs
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-wn-client-3.5]
-paramsets   = el7,x86_64 el8,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/3.5/%(dver)s
-
-dirname     = osg-wn-client
-tarballname = osg-wn-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data
-              hosted-ce-tools
-repofile    = repos/osg-3.5-%(dver)s.repo.in
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-wn-client-3.6]
-paramsets   = el7,x86_64 el8,x86_64 el9,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/3.6/%(dver)s
-
-dirname     = osg-wn-client
-tarballname = osg-wn-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data
-              hosted-ce-tools
-repofile    = repos/osg-3.6-%(dver)s.repo.in
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-wn-client-23]
-paramsets   = el8,x86_64 el9,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/23/%(dver)s
-
-dirname     = osg-wn-client
-tarballname = osg-wn-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data
-              hosted-ce-tools
-repofile    = repos/osg-23-%(dver)s.repo.in
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-wn-client-24]
-paramsets   = el8,x86_64 el9,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/24/%(dver)s
-
-dirname     = osg-wn-client
-tarballname = osg-wn-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data
-repofile    = repos/osg-24-%(dver)s.repo.in
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-wn-client-25]
-paramsets   = el8,x86_64 el9,x86_64 el10,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/2xi54/%(dver)s
-
-dirname     = osg-wn-client
-tarballname = osg-wn-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data
-repofile    = repos/osg-25-%(dver)s.repo.in
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-afs-client-3.5]
-paramsets   = el7,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/3.5/%(dver)s
-              patches/afs-client/3.5/common
-              patches/afs-client/3.5/%(dver)s
-dirname     = osg-afs-client
-tarballname = osg-afs-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data osg-ca-scripts
-              globus-common-progs  globus-gsi-cert-utils-progs  gsi-openssh-clients
-              cigetcert
-repofile    = repos/osg-3.5-%(dver)s.repo.in
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-afs-client-3.6]
-paramsets   = el7,x86_64
-patchdirs   = patches/wn-client/common
-              patches/wn-client/common/%(dver)s
-              patches/wn-client/3.6/%(dver)s
-              patches/afs-client/3.6/common
-              patches/afs-client/3.6/%(dver)s
-dirname     = osg-afs-client
-tarballname = osg-afs-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-packages    = osg-wn-client osg-update-data osg-ca-scripts
-              cigetcert
-repofile    = repos/osg-3.6-%(dver)s.repo.in
-stage1file  = osg-stage1-%(dver)s.lst
-
-[osg-gridftp-3.5]
-paramsets   = el7,x86_64
-dirname     = gridftp
-tarballname = gridftp-%(version)s-%(relnum)s.tar.gz
-packages    = globus-gridftp-server-progs
-              globus-gass-copy-progs
-              globus-proxy-utils
-repofile    = repos/osg-3.5-%(dver)s.repo.in
-versionrpm  = globus-gridftp-server-progs
-stage1file  = osg-stage1-%(dver)s.lst
-
-[lscsoft-all]
-paramsets   = el6,x86_64
-;patchdirs   = patches/ligo
-dirname     = lscsoft-all
-tarballname = lscsoft-all-%(version)s.tar.gz
-packages    = @lscsoft-all
-repofile    = repos/ligo-el6.repo.in
-;versionrpm  =
-stage1file  = ligo-stage1.lst
-
-[glue]
-paramsets   = el6,x86_64
-;patchdirs   = patches/ligo
-dirname     = glue
-tarballname = glue-%(version)s-%(relnum)s.tar.gz
-packages    = glue
-repofile    = repos/ligo-el6.repo.in
-versionrpm  = glue
-stage1file  = ligo-stage1.lst
-
 [xrootd-for-pelican-el9]
 paramsets   = el9,x86_64
 dirname     = xrootd
@@ -215,7 +49,7 @@ repofile    = repos/osg-25-%(dver)s.repo.in
 versionrpm  = xrootd
 stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
 
-[pelican-with-xrootd]
+[pelican-el9]
 paramsets   = el9,x86_64
 dirname     = pelican-with-xrootd
 tarballname = pelican-with-xrootd-%(version)s-%(relnum)s.tar.gz
