Drop basearch handling - we no longer have i386 and it's hard to build for aarch64 on x86_64 and vice versa

--- a/bundles.ini
+++ b/bundles.ini
@@ -5,16 +5,16 @@ default_bundles = xrootd-no-s3 xrootd-for-pelican pelican-with-xrootd pelican-no
 
 
 [xrootd-for-pelican]
-;; paramsets: list of 'dver,basearch' pairs to build tarballs for
-paramsets   = el9,x86_64
+;; dvers: list of distro versions to build tarballs for
+dvers       = el9
 ;; dirname: the top-level directory of the tarball
 dirname     = xrootd
 ;; tarballname: the template for the tarball name
-;;              %(version)s, %(relnum)s, %(dver)s and %(basearch)s are
+;;              %(version)s, %(relnum)s, and %(dver)s are
 ;;              available for substitution
 tarballname = xrootd-for-pelican-%(version)s-%(relnum)s.%(dver)s.tar.gz
 ;; patchdirs: list of directory trees to apply patches from
-;;            %(dver)s and %(basearch)s are available for substitution
+;;            %(dver)s is available for substitution
 ;patchdirs   = patches/xrootd-for-pelican
 ;; packages: the packages to install and include in the
 ;;           tarball
@@ -54,7 +54,7 @@ stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
 
 [xrootd-no-s3]
 # el8 does not have xrootd-s3-http
-paramsets   = el8,x86_64
+dvers       = el8
 dirname     = xrootd
 tarballname = xrootd-for-pelican-%(version)s-%(relnum)s.%(dver)s.tar.gz
 ;patchdirs   = patches/xrootd-for-pelican
@@ -71,7 +71,7 @@ stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
 
 [pelican-no-s3]
 # el8 does not have xrootd-s3-http
-paramsets   = el8,x86_64
+paramsets   = el8
 dirname     = pelican-with-xrootd
 tarballname = pelican-with-xrootd-%(version)s-%(relnum)s.%(dver)s.tar.gz
 ;patchdirs   = patches/xrootd-for-pelican
