Update the bundles
* Rename the 'pelican' bundle to 'pelican-with-xrootd'.
* Include the specific xrootd packages in the 'pelican-with-xrootd' bundle so they show up in the version list.
* Some renames: xrootd-for-pelican-el8 has been renamed xrootd-no-s3; dropped the el9 suffix from the others.
* Add xrdhttp-pelican to package list.
* Use xrootd-server as the versionrpm for the xrootd-for-pelican tarball.

--- a/bundles.ini
+++ b/bundles.ini
@@ -1,79 +1,89 @@
 [GLOBAL]
-default_bundles_24=xrootd-for-pelican-el8 xrootd-for-pelican-el9 pelican-el8 pelican-el9
-default_bundles_25=xrootd-for-pelican-el8 xrootd-for-pelican-el9 pelican-el8 pelican-el9
+default_bundles = xrootd-no-s3 xrootd-for-pelican pelican-with-xrootd pelican-no-s3
 
-; This file defines the tarball bundles that we can create
+; This file defines the tarball bundles that we can create.
 
-; Example:
-;[osg-wn-client-3.1]
+
+[xrootd-for-pelican]
 ;; paramsets: list of 'dver,basearch' pairs to build tarballs for
-;paramsets   = el5,i386 el5,x86_64 el6,i386 el6,x86_64
-;; patchdirs: list of directory trees to apply patches from
-;;            %(dver)s and %(basearch)s are available for substitution
-;patchdirs   = patches/wn-client/common
-;              patches/wn-client/common/%(dver)s
-;              patches/wn-client/not3.3/%(dver)s
-;              patches/wn-client/3.1/%(dver)s
+paramsets   = el9,x86_64
 ;; dirname: the top-level directory of the tarball
-;dirname     = osg-wn-client
+dirname     = xrootd
 ;; tarballname: the template for the tarball name
 ;;              %(version)s, %(relnum)s, %(dver)s and %(basearch)s are
 ;;              available for substitution
-;tarballname = osg-wn-client-%(version)s-%(relnum)s.%(dver)s.%(basearch)s.tar.gz
-;; packages: the packages to install in stage 2 of the build and include in the
+tarballname = xrootd-for-pelican-%(version)s-%(relnum)s.%(dver)s.tar.gz
+;; patchdirs: list of directory trees to apply patches from
+;;            %(dver)s and %(basearch)s are available for substitution
+;patchdirs   = patches/xrootd-for-pelican
+;; packages: the packages to install and include in the
 ;;           tarball
-;packages    = osg-ca-scripts osg-wn-client
-;; repofile: the yum repos to take packages from
-;repofile    = repos/osg-3.1.repo.in
+packages    = xrdcl-pelican
+              xrdhttp-pelican
+              xrootd-multiuser
+              xrootd-s3-http
+              xrootd-scitokens
+              xrootd-server
+              xrootd-tcp-stats
+              xrootd-voms
+repofile    = repos/osg-25-%(dver)s.repo.in
 ;; versionrpm (optional): the package whose version determines the 'version'
 ;;                        field of the tarballname.  if not specified, --version
 ;;                        must be passed on the command line
-;versionrpm  = osg-version
-;; stage1file: the list of stage 1 packages to install in the staging dir but
-;;             exclude from the tarball
-;stage1file  = osg-stage1.lst
+versionrpm  = xrootd-server
+;; stage1file: the list of packages to install as dependencies but
+;;             exclude from the final tarball
+stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
 
-[xrootd-for-pelican-el9]
-paramsets   = el9,x86_64
-dirname     = xrootd
-tarballname = xrootd-for-pelican-%(version)s-%(relnum)s.tar.gz
+[pelican-with-xrootd]
+dvers       = el9
+dirname     = pelican-with-xrootd
+tarballname = pelican-with-xrootd-%(version)s-%(relnum)s.%(dver)s.tar.gz
 ;patchdirs   = patches/xrootd-for-pelican
-packages    = xrdcl-pelican
+packages    = pelican-server
+              xrdcl-pelican
+              xrdhttp-pelican
               xrootd-multiuser
               xrootd-s3-http
               xrootd-scitokens
               xrootd-server
               xrootd-tcp-stats
               xrootd-voms
-repofile    = repos/osg-25-%(dver)s.repo.in
-versionrpm  = xrootd
-stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
-
-[pelican-el9]
-paramsets   = el9,x86_64
-dirname     = pelican-with-xrootd
-tarballname = pelican-with-xrootd-%(version)s-%(relnum)s.tar.gz
-;patchdirs   = patches/xrootd-for-pelican
-packages    = pelican-server
-              xrootd-multiuser
-              xrootd-s3-http
-repofile    = repos/osg-25-%(dver)s.repo.in
-versionrpm  = pelican
+versionrpm  = pelican-server
 stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
 
 
-[xrootd-for-pelican-el8]
+[xrootd-no-s3]
 # el8 does not have xrootd-s3-http
 paramsets   = el8,x86_64
 dirname     = xrootd
-tarballname = xrootd-for-pelican-%(version)s-%(relnum)s.tar.gz
+tarballname = xrootd-for-pelican-%(version)s-%(relnum)s.%(dver)s.tar.gz
 ;patchdirs   = patches/xrootd-for-pelican
 packages    = xrdcl-pelican
+              xrdhttp-pelican
               xrootd-multiuser
               xrootd-scitokens
               xrootd-server
               xrootd-tcp-stats
               xrootd-voms
 repofile    = repos/osg-25-%(dver)s.repo.in
-versionrpm  = xrootd
+versionrpm  = xrootd-server
+stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
+
+
+[pelican-no-s3]
+# el8 does not have xrootd-s3-http
+paramsets   = el8,x86_64
+dirname     = pelican-with-xrootd
+tarballname = pelican-with-xrootd-%(version)s-%(relnum)s.%(dver)s.tar.gz
+;patchdirs   = patches/xrootd-for-pelican
+packages    = pelican-server
+              xrdcl-pelican
+              xrdhttp-pelican
+              xrootd-multiuser
+              xrootd-scitokens
+              xrootd-server
+              xrootd-tcp-stats
+              xrootd-voms
+versionrpm  = pelican-server
 stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
