Last-minute bugfixes
* KeyError: 'dver'
* Missing python3 in the Alma 8 build image
* Forgot to change the 'paramsets' to 'dvers' for the pelican-no-s3 bundle
* post-install: fix wrapper location

--- a/bundles.ini
+++ b/bundles.ini
@@ -71,7 +71,7 @@ stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
 
 [pelican-no-s3]
 # el8 does not have xrootd-s3-http
-paramsets   = el8
+dvers       = el8
 dirname     = pelican-with-xrootd
 tarballname = pelican-with-xrootd-%(version)s-%(relnum)s.%(dver)s.tar.gz
 ;patchdirs   = patches/xrootd-for-pelican
