Adjust README to correct some paths, add more to .gitignore
There were a few small inconsistencies in some of the script paths.
In particular, after `cd`ing into the extracted tarball, the `post-install`
script appeared to live at `portable-xrootd/post-install`, not
`post-install/post-install`.

I also couldn't get an EL10 build working (succeeded with EL9), so I
didn't include EL10 in the README update.

Finally, I added the __pycache__ and extracted tarball directories
to .gitignore while working on this commit.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /*.tar.gz
 /*.tar
 /yumconf.py
+__pycache__/
+
+# Extracted directories for various tarballs
+pelican-with-xrootd/
+xrootd-for-pelican/
+pelican-no-s3/
+xrootd-no-s3/
