Add el10 support

--- a/bundles.ini
+++ b/bundles.ini
@@ -6,7 +6,7 @@ default_bundles = xrootd-no-s3 xrootd-for-pelican pelican-with-xrootd pelican-no
 
 [xrootd-for-pelican]
 ;; dvers: list of distro versions to build tarballs for
-dvers       = el9
+dvers       = el9 el10
 ;; dirname: the top-level directory of the tarball
 dirname     = xrootd
 ;; tarballname: the template for the tarball name
@@ -35,7 +35,7 @@ versionrpm  = xrootd-server
 stage1file  = xrootd-for-pelican-stage1-%(dver)s.lst
 
 [pelican-with-xrootd]
-dvers       = el9
+dvers       = el9 el10
 dirname     = pelican-with-xrootd
 tarballname = pelican-with-xrootd-%(version)s-%(relnum)s.%(dver)s.tar.gz
 ;patchdirs   = patches/xrootd-for-pelican
